# fastapi-react

./: .env  README.md  docker-compose.override.yaml  docker-compose.yaml
api/: Dockerfile  pyproject.toml
api/.devcontainer/: devcontainer.json
api/api/: main.py
api/api/domain/task/: task.py
api/api/presentation/task/: router.py  schema.py
api/api/usecase/task/: task_command_model.py  task_command_usecase.py  task_query_model.py  task_query_usecase.py
api/app/: main.py
api/app/core/: config.py  database.py  search_engine.py
api/app/cruds/: task.py
api/app/domain/book/: model.py  routes.py  schema.py  service.py
api/app/domain/search/: search_service.py
api/app/domain/search_condition/: crud.py  model.py  routes.py  schema.py
api/app/domain/shared/: model_base.py
api/app/models/: task.py
api/app/routes/: task.py
api/app/schemas/: task.py
api/migrations/: env.py
api/migrations/versions/: 07757b6740a8_initial_empty.py  5a055c7c210c_add_tables.py
api/tests/book/: test_book_search.py
docker/api/: Dockerfile  init.sh
docker/search/: Dockerfile  opensearch-dashbord.yml
front/: .eslintrc.json  .gitignore  .prettierignore  Dockerfile  aspida.config.js  dataset.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
front/.devcontainer/: devcontainer.json
front/src/: App.css  App.tsx  theme.ts
front/src/lib/: ApiClient.ts
front/src/providers/: app.tsx  auth.tsx
front/src/routes/: index.tsx  protected.tsx  public.tsx
migrations/search-engine/: dataset.json  migration.sh
(+13 files in other folders)
