[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["tamanugi <tamanugi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
psycopg2 = "^2.9.3"
SQLAlchemy = "^1.4.36"
opensearch-py = "^1.1.0"
requests = "^2.27.1"
elasticsearch-dsl = "^7.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.960"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
namespace_packages = true
disallow_untyped_defs = true
exclude = [
    "^migrations/",
    "^tests/"
]
